@@ -18,19 +18,27 @@ body div#toolbar {
   top: 30px;
 }
 
+/**
+ * Base styles.
+ *
+ * We use a keyword for the toolbar font size to make it display consistently
+ * across different themes, while still allowing browsers to resize the text.
+ */
 #admin-menu {
-  font: normal 0.9em "Lucida Grande", Verdana, sans-serif;
-  box-shadow: 0 3px 20px #000;
-  -moz-box-shadow: 0 3px 20px #000;
-  -webkit-box-shadow: 0 3px 20px #000;
-  filter: progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10');
-  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10')";
-}
-#admin-menu.admin-menu-position-fixed {
+  font: normal small "Lucida Grande", Verdana, sans-serif;
+  position: fixed;
   margin: 0 -20px;
   padding: 0 20px;
+  -moz-box-shadow: 0 3px 20px #000;
+  -webkit-box-shadow: 0 3px 20px #000;
+  box-shadow: 0 3px 20px #000;
+  filter: progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10');
+  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(color=#000000, direction='180', strength='10')";
+  right: 0;
+  width: auto;
 }
 #admin-menu-wrapper {
+  font-size: .846em;
   padding: 5px 10px 0;
 }
 
@@ -45,17 +53,22 @@ body div#toolbar {
 #admin-menu li.admin-menu-icon > a {
   padding: 2px 10px 3px;
 }
+
+/**
+ * Administration menu.
+ */
 #admin-menu li.admin-menu-icon > a span {
-  background: url(toolbar.png) no-repeat 0 -45px;
-  display: block;
-  height: 14px;
-  text-indent: -9999px;
+  vertical-align: text-bottom;
   width: 11px;
+  height: 14px;
+  display: block;
+  background: url(toolbar.png) no-repeat 0 -45px;
+  text-indent: -9999px;
 }
 #admin-menu > div > ul > li > a {
   border-right: 0;
   margin-bottom: 4px;
-  padding: 2px 8px 3px;
+  padding: 2px 10px 3px;
 }
 #admin-menu ul li.admin-menu-toolbar-category > a,
 #admin-menu ul li.admin-menu-action > a {
@@ -84,16 +97,25 @@ body div#toolbar {
   float: right;
 }
 #admin-menu li.admin-menu-shortcuts span.toggle {
-  background: url(toolbar.png) 0 -20px no-repeat;
   cursor: pointer;
+  background: url(toolbar.png) 0 -20px no-repeat;
   display: block;
-  height: 25px;
+  margin: 0 0 0 1.3em;
+  text-indent: -9999px;
   overflow: hidden;
-  text-indent: -999px;
   width: 25px;
+  height: 25px;
+}
+#admin-menu li.admin-menu-shortcuts span.toggle:focus,
+#admin-menu li.admin-menu-shortcuts span.toggle:hover {
+  background-position: -50px -20px;
 }
 #admin-menu li.admin-menu-shortcuts-active span.toggle {
-  background-position: -25px -60px;
+  background-position: -25px -20px;
+}
+#admin-menu li.admin-menu-shortcuts-active span.toggle:focus,
+#admin-menu li.admin-menu-shortcuts-active span.toggle:hover {
+  background-position: -75px -20px;
 }
 
 /**
@@ -101,13 +123,15 @@ body div#toolbar {
  */
 #admin-menu li.admin-menu-shortcuts-active ul {
   display: block !important;
-  left: 0 !important;
-  width: 100%;
+  left: 20px !important;
+  right: 20px;
+  width: auto;
 }
 #admin-menu li.admin-menu-shortcuts ul {
   background-color: #666;
+  left: 20px !important;
   padding: 5px 10px;
-  right: 10px;
+  right: 20px;
   width: auto;
 }
 #admin-menu li.admin-menu-shortcuts ul li {
