@@ -2,6 +2,7 @@
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+#1022902 by matglas86, sun: Updated for changed core Toolbar styles.
 
 
 Admin Menu 7.x-3.0-RC1, 2010-01-07
